--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -62,6 +62,7 @@ html, body {
     padding: 15px;
     /*background-color: #3CABA4;*/
     background-color: #1e1e1e;
+    color: #909E9E;
 }
 
 .tab-container {
@@ -87,4 +88,67 @@ html, body {
     height: calc(100% - 30px);
     /*background-color: #8a6d3b;*/
     background-color: #272822;
+}
+
+.header-tabs {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    /*background-color: #dcdcdc;*/
+    -webkit-user-select: none;
+    user-select: none;
+    font: normal 11px/15px Helvetica Neue,Arial,sans-serif;
+    font-size: 13px;
+    color: #ddd;
+}
+
+.tab {
+    padding-left: 5px;
+    padding-right: 5px;
+    line-height: 2;
+    height: calc(100% - 3px);
+    float: left;
+    margin-top: 3px;
+    cursor: pointer;
+    background-color: #2E2E2E;
+}
+
+.close-img {
+    margin-left: 2px;
+    opacity: 0;
+    -webkit-transition: opacity 0.5s;
+    transition: opacity 0.5s;
+}
+
+.tab.active-tab {
+    background-color: #404040;
+}
+
+.tab:hover > .close-img,
+.tab.active-tab > .close-img {
+    opacity: 1;
+}
+
+.code-panel {
+    position: relative;
+    /*width: 100%;*/
+    height: 49px;
+    background-color: #404040;
+    border-bottom: 1px solid #2E2E2E;
+    display: flex;
+    -webkit-align-items: center;
+    align-items: center;
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
+.code-panel > .btn {
+    margin-left: 4px;
+}
+
+.code-editor {
+    position: relative;
+    width: 100%;
+    height: calc(100% - 50px);
+    /*height: 900px;*/
 }
