--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -41,7 +41,7 @@ html, body {
     width: 100%;
     height: 50px;
     /*background-color: blueviolet;*/
-    background-color: #1e1e1e;
+    /*background-color: #1e1e1e;*/
 }
 
 .panel-main {
@@ -61,8 +61,8 @@ html, body {
     width: 300px;
     padding: 15px;
     /*background-color: #3CABA4;*/
-    background-color: #1e1e1e;
-    color: #909E9E;
+    /*background-color: #1e1e1e;*/
+    /*color: #909E9E;*/
 }
 
 .tab-container {
@@ -72,14 +72,14 @@ html, body {
     width: calc(100% - 302px);
     overflow: hidden;
     /*background-color: #31708f;*/
-    background-color: #1e1e1e;
+    /*background-color: #1e1e1e;*/
 }
 
 .header-tabs-container {
     position: relative;
     width: 100%;
     height: 30px;
-    background-color: rgba(0,0,0,.25);
+    /*background-color: rgba(0,0,0,.25);*/
 }
 
 .body-tabs-container {
@@ -87,7 +87,7 @@ html, body {
     width: 100%;
     height: calc(100% - 30px);
     /*background-color: #8a6d3b;*/
-    background-color: #272822;
+    /*background-color: #272822;*/
 }
 
 .header-tabs {
@@ -99,7 +99,7 @@ html, body {
     user-select: none;
     font: normal 11px/15px Helvetica Neue,Arial,sans-serif;
     font-size: 13px;
-    color: #ddd;
+    /*color: #ddd;*/
 }
 
 .tab {
@@ -110,7 +110,7 @@ html, body {
     float: left;
     margin-top: 3px;
     cursor: pointer;
-    background-color: #2E2E2E;
+    /*background-color: #2E2E2E;*/
 }
 
 .close-img {
@@ -121,7 +121,7 @@ html, body {
 }
 
 .tab.active-tab {
-    background-color: #404040;
+    /*background-color: #404040;*/
 }
 
 .tab:hover > .close-img,
@@ -133,7 +133,7 @@ html, body {
     position: relative;
     /*width: 100%;*/
     height: 49px;
-    background-color: #404040;
+    /*background-color: #404040;*/
     border-bottom: 1px solid #2E2E2E;
     display: flex;
     -webkit-align-items: center;
