--- a/client/app/css/dark-theme.css
+++ b/client/app/css/dark-theme.css
@@ -13,18 +13,55 @@
 }
 
 .body-tabs-container {
-    background-color: #272822;
+    background-color: #222222;
 }
 
 .header-tabs {
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#2b2b2b+0,303030+15,373737+74,353535+81,2e2e2e+85,585858+89,444444+93,424242+96,454545+100 */
+    background: #2b2b2b; /* Old browsers */
+    background: -moz-linear-gradient(top,  #2b2b2b 0%, #303030 15%, #373737 74%, #353535 81%, #2e2e2e 85%, #585858 89%, #444444 93%, #424242 96%, #454545 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  #2b2b2b 0%,#303030 15%,#373737 74%,#353535 81%,#2e2e2e 85%,#585858 89%,#444444 93%,#424242 96%,#454545 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  #2b2b2b 0%,#303030 15%,#373737 74%,#353535 81%,#2e2e2e 85%,#585858 89%,#444444 93%,#424242 96%,#454545 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#2b2b2b', endColorstr='#454545',GradientType=0 ); /* IE6-9 */
     color: #ddd;
 }
 
 .tab {
-    background-color: #2E2E2E;
+    /*background-color: #2E2E2E;*/
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#383838+0,444444+8,434343+48,3d3d3d+88,ffffff+92,ffffff+100 */
+    background: rgb(56,56,56); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(56,56,56,1) 0%, rgba(68,68,68,1) 8%, rgba(67,67,67,1) 48%, rgba(61,61,61,1) 88%, rgba(255,255,255,0) 92%, rgba(255,255,255,0) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(56,56,56,1) 0%,rgba(68,68,68,1) 8%,rgba(67,67,67,1) 48%,rgba(61,61,61,1) 88%,rgba(255,255,255,0) 92%,rgba(255,255,255,0) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(56,56,56,1) 0%,rgba(68,68,68,1) 8%,rgba(67,67,67,1) 48%,rgba(61,61,61,1) 88%,rgba(255,255,255,0) 92%,rgba(255,255,255,0) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#383838', endColorstr='#ffffff',GradientType=0 ); /* IE6-9 */
+    height: calc(100% - 1px);
+    margin-top: 0;
 }
 
-.code-panel,
 .tab.active-tab {
-    background-color: #404040;
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#4a4a4a+0,555555+4,555555+8,454545+100 */
+    background: rgb(74,74,74); /* Old browsers */
+    background: -moz-linear-gradient(top,  rgba(74,74,74,1) 0%, rgba(85,85,85,1) 4%, rgba(85,85,85,1) 8%, rgba(69,69,69,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(top,  rgba(74,74,74,1) 0%,rgba(85,85,85,1) 4%,rgba(85,85,85,1) 8%,rgba(69,69,69,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to bottom,  rgba(74,74,74,1) 0%,rgba(85,85,85,1) 4%,rgba(85,85,85,1) 8%,rgba(69,69,69,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4a4a4a', endColorstr='#454545',GradientType=0 ); /* IE6-9 */
+}
+
+.code-panel {
+    background-color: #454545;
+}
+
+
+/* TODO make proper theme */
+
+.ace-monokai {
+    background-color: #222222;
+}
+
+.ace-monokai .ace_gutter {
+    background: #262626;
+}
+
+.ace-monokai .ace_marker-layer .ace_selection {
+    background-color: #444444;
 }
