updated client and server api concerning script operations

--- a/client/app/templates/code-tab.html
+++ b/client/app/templates/code-tab.html
@@ -15,4 +15,4 @@
         </div>
     </script>
 </div>
-<div class="code-editor" ui-ace="aceOption" ng-model="tabs[currentActiveTab].code"></div>
+<div class="code-editor" ui-ace="aceOption" ng-model="code"></div>
