--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -60,9 +60,15 @@ html, body {
     height: 100%;
     width: 300px;
     padding: 15px;
+    overflow: auto;
+    white-space: nowrap;
     /*background-color: #3CABA4;*/
     /*background-color: #1e1e1e;*/
     /*color: #909E9E;*/
+}
+
+treecontrol ul {
+    overflow: inherit;
 }
 
 .tab-container {
@@ -152,4 +158,41 @@ html, body {
     height: calc(100% - 50px);
     font-size: 14px;
     /*height: 900px;*/
+}
+
+ ::-webkit-scrollbar,::-webkit-scrollbar {
+    width: 7px;
+    height: 7px;
+}
+
+ ::-webkit-scrollbar-button:start:decrement, ::-webkit-scrollbar-button:end:increment,::-webkit-scrollbar-button:start:decrement,::-webkit-scrollbar-button:end:increment {
+    display: block;
+    height: 0;
+    background-color: #222222;
+}
+
+ ::-webkit-scrollbar-track-piece,::-webkit-scrollbar-track-piece {
+    /*margin: 10px 0;*/
+    -webkit-border-radius: 0;
+    -webkit-border-bottom-right-radius: 4px;
+    -webkit-border-bottom-left-radius: 4px;
+    -webkit-box-shadow: inset 0 0 2px rgba(0,0,0,0.3);
+}
+
+ ::-webkit-scrollbar-thumb:vertical,::-webkit-scrollbar-thumb:vertical {
+    height: 50px;
+    /*background-color: rgba(0,0,0,0.12);*/
+    background-color: #404040;
+    -webkit-border-radius: 4px;
+}
+
+ ::-webkit-scrollbar-thumb:horizontal,::-webkit-scrollbar-thumb:horizontal {
+    width: 50px;
+    /*background-color: rgba(0,0,0,0.12);*/
+    background-color: #404040;
+    -webkit-border-radius: 4px;
+}
+
+::-webkit-scrollbar-corner {
+    background-color: #222222;
 }
