--- a/client/app/templates/code-tab.html
+++ b/client/app/templates/code-tab.html
@@ -6,7 +6,7 @@
         <div class="modal-header">
             <h3>Save as</h3>
         </div>
-        <div class="modal-body form-group bootstrap">
+        <div class="modal-body form-group">
             <input type="text" data-ng-model="saveLocation" class="form-control">
         </div>
         <div class="modal-footer">
