--- a/client/app/templates/tab-set.html
+++ b/client/app/templates/tab-set.html
@@ -9,7 +9,7 @@
     </div>
     <div class="body-tabs-container">
         <div style="position: relative; width: 100%; height: 100%;" data-ng-repeat="tab in tabset" data-ng-show="tab.isActive">
-            <div data-tab-type="tab.type" data-tab-data="tab" style="position: relative; width: 100%; height: 100%;"></div>
+            <div data-tab-type="tab.type" data-tab-data="tab" data-switch-new="switchNew(ntab)" style="position: relative; width: 100%; height: 100%;"></div>
         </div>
     </div>
 </div>
