--- a/client/app/css/dark-theme.css
+++ b/client/app/css/dark-theme.css
@@ -48,7 +48,7 @@
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#4a4a4a', endColorstr='#454545',GradientType=0 ); /* IE6-9 */
 }
 
-.code-panel {
+.view-panel {
     background-color: #454545;
 }
 
