--- a/client/app/css/dark-theme.css
+++ b/client/app/css/dark-theme.css
@@ -52,6 +52,18 @@
     background-color: #454545;
 }
 
+.immediate-results {
+    /*background-color: #262626;*/
+    background-color: #454545;
+}
+
+.immediate-results > .results {
+    background-color: #2E2E2E;
+    -webkit-box-shadow: inset 0px 0px 10px 2px rgba(10, 10, 10, 0.5);
+    -moz-box-shadow:    inset 0px 0px 10px 2px rgba(10, 10, 10, 0.5);
+    box-shadow:         inset 0px 0px 10px 2px rgba(10, 10, 10, 0.5);
+}
+
 .btn-default[disabled],
 .btn-default {
     color: #ddd;
