--- a/client/app/templates/model-tab.html
+++ b/client/app/templates/model-tab.html
@@ -1,9 +1,9 @@
 <div class="view-panel model-panel"></div>
-<div class="immediate-editor" ui-ace="aceOption" ng-model="code"></div>
+<div class="immediate-editor" ui-ace="aceOption" data-ng-model="code"></div>
 <div class="vertical-separator"></div>
 <div class="immediate-results">
 	<div class="menu">
-		<button class="btn btn-default">Run Script</button>
+		<button class="btn btn-default" data-ng-click="runImmediate()">Run Immediate Script</button>
 	</div>
-	<div class="results"></div>
+	<div class="results">{{scriptResult}}</div>
 </div>
