--- a/client/app/css/dark-theme.css
+++ b/client/app/css/dark-theme.css
@@ -62,6 +62,7 @@
     -webkit-box-shadow: inset 0px 0px 10px 2px rgba(10, 10, 10, 0.5);
     -moz-box-shadow:    inset 0px 0px 10px 2px rgba(10, 10, 10, 0.5);
     box-shadow:         inset 0px 0px 10px 2px rgba(10, 10, 10, 0.5);
+    color: #ddd;
 }
 
 .btn-default[disabled],
