--- a/client/app/css/dark-theme.css
+++ b/client/app/css/dark-theme.css
@@ -1,3 +1,4 @@
+.form-control.input,
 .panel-top,
 .nav-tree-container,
 .tab-container {
@@ -15,6 +16,23 @@
 
 .body-tabs-container {
     background-color: #222222;
+}
+
+.form-control.input,
+.modal-content {
+    color: #ddd;
+}
+
+.modal-content {
+    background-color: #3B3B3B;
+}
+
+.modal-header {
+    border-bottom-color: #6F6F68;
+}
+
+.modal-footer {
+    border-top-color: #6F6F68;
 }
 
 .header-tabs {
