--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -67,6 +67,13 @@ html, body {
     /*color: #909E9E;*/
 }
 
+.form-control.input {
+    width: 90%;
+    margin: auto;
+    margin-top: 15px;
+    border: 0;
+}
+
 treecontrol ul {
     overflow: inherit;
 }
