--- a/client/app/templates/code-tab.html
+++ b/client/app/templates/code-tab.html
@@ -2,6 +2,7 @@
     <!-- TODO -->
     <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="saveScript()">Save</div>
     <div class="btn btn-default" data-ng-click="saveScriptAs()">Save as</div>
+    <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="deleteScript()">Delete</div>
     <script type="text/ng-template" id="saveAsModal.html">
         <div class="modal-header">
             <h3>Save as</h3>
@@ -23,6 +24,18 @@
         </div>
         <div class="modal-footer">
             <button class='btn btn-default' data-ng-click="$close([selectedNode.id, filename])">Save</button>
+            <button class='btn btn-default' data-ng-click="$dismiss('Canceled')">Cancel</button>
+        </div>
+    </script>
+    <script type="text/ng-template" id="deleteModal.html">
+        <div class="modal-header">
+            <h3>Delete Script {{data.name}}</h3>
+        </div>
+        <div class="modal-body">
+            <p>This action cannot be undone.</p>
+        </div>
+        <div class="modal-footer">
+            <button class='btn btn-danger' data-ng-click="$close()">Delete</button>
             <button class='btn btn-default' data-ng-click="$dismiss('Canceled')">Cancel</button>
         </div>
     </script>
