--- a/client/app/templates/pipeline-tab.html
+++ b/client/app/templates/pipeline-tab.html
@@ -1,2 +1,5 @@
 <div class="view-panel pipeline-panel"></div>
-<div class="pipeline-container"></div>
+<div class="pipeline-container">
+	<div class="connections"></div>
+	<div class="nodes"></div>
+</div>
