dropping script functionality working with inputs and outputs, increased connection width, decreased font-size, node created at dropping point

--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -168,6 +168,10 @@ treecontrol ul {
     /*height: 900px;*/
 }
 
+.pipeline-container {
+    font-size: 12px;
+}
+
 .immediate-editor {
     position: relative;
     width: 100%;
