Added x, y, path, id attributes to nodes. Client prepared for saving pipelines

--- a/client/app/templates/code-tab.html
+++ b/client/app/templates/code-tab.html
@@ -1,5 +1,5 @@
 <div class="view-panel code-panel">
-    <!-- TODO -->
+    <!-- TODO REFACTOR EXTRACT-->
     <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="saveScript()">Save</div>
     <div class="btn btn-default" data-ng-click="saveScriptAs()">Save as</div>
     <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="deleteScript()">Delete</div>
