WIP pipeline execution

--- a/client/app/templates/pipeline-tab.html
+++ b/client/app/templates/pipeline-tab.html
@@ -3,6 +3,7 @@
     <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="savePipeline()">Save</div>
     <div class="btn btn-default" data-ng-click="savePipelineAs()">Save as</div>
     <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="deletePipeline()">Delete</div>
+    <div class="btn btn-default" data-ng-disabled="!data.id" data-ng-click="runPipeline()">Run Pipeline</div>
     <script type="text/ng-template" id="saveAsModal.html">
         <div class="modal-header">
             <h3>Save as</h3>
