--- a/client/app/css/dark-theme.css
+++ b/client/app/css/dark-theme.css
@@ -94,6 +94,19 @@
     box-shadow:         0px 0px 11px 0px rgba(0, 0, 0, 0.75);*/
 }
 
+.popover {
+    background-color: #1A1A1A;
+    color: #C4C4C4;
+}
+
+.popover.right>.arrow:after {
+    border-right-color: #1A1A1A;
+}
+
+.pipelinenode-options > ul li {
+    border-top-color: #999;
+}
+
 .btn-default[disabled],
 .btn-default {
     color: #ddd;
