Connections can be deleted; now it's possible to cancel connection creation

--- a/client/app/css/dark-theme.css
+++ b/client/app/css/dark-theme.css
@@ -99,8 +99,10 @@
     color: #C4C4C4;
 }
 
-.popover.right>.arrow:after {
+.popover.right>.arrow:after,
+.popover.left>.arrow:after {
     border-right-color: #1A1A1A;
+    border-left-color: #1A1A1A;
 }
 
 .pipelinenode-options > ul li {
