Added delete node functionality

--- a/client/app/css/main.css
+++ b/client/app/css/main.css
@@ -228,6 +228,13 @@ treecontrol ul {
     margin-bottom: 5px;
 }
 
+.pipeline-container .icon.ion-trash-a  {
+    float: right;
+    font-size: larger;
+    line-height: 1;
+    cursor: pointer;
+}
+
 .pipeline-container .io-row > .io-cell {
     display: -webkit-flex;
     display: flex;
