--- a/client/app/css/dark-theme.css
+++ b/client/app/css/dark-theme.css
@@ -94,6 +94,14 @@
     box-shadow:         0px 0px 11px 0px rgba(0, 0, 0, 0.75);*/
 }
 
+.pipeline-container .icon.ion-trash-a  {
+    color: #666666;
+}
+
+.pipeline-container .icon.ion-trash-a:hover  {
+    color: #aa1313;
+}
+
 .popover {
     background-color: #1A1A1A;
     color: #C4C4C4;
